Add a model for post.
Add a function into the posts route that queries the server
for all posts.

This commit was contained a hard to find bug.

I set the content type of "content" to "content" when it should
have been "string"

--- a/app/templates/components/my-application.hbs
+++ b/app/templates/components/my-application.hbs
@@ -28,7 +28,9 @@
 {{/each}}
 
 <div class="col-md-8 col-md-offset-2">
-  {{#link-to "posts"}}Posts{{/link-to}}
+  {{#if isAuthenticated}}
+    {{#link-to "posts" class='btn btn-default'}}Posts{{/link-to}}
+  {{/if}}
 
   {{outlet}}
 </div>
