Added a route to make a new list. Updated the route file to add a createPost function.
Created forms to hold the data for the new post.
Bound values to post properties.
CreatePost function just console.logs a string

--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,10 +1,11 @@
 <h1>Stuff is working!</h1>
-<ul>
+
 {{#each model as |post|}}
-    <li>Stuff is happening!</li>
+  <ul>
     <li>{{post.title}}</li>
     <li>{{post.content}}</li>
+  </ul>
 {{/each}}
-</ul>
-{{#link-to "application"}}Back{{/link-to}}
+{{#link-to "posts.new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
+{{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
 {{outlet}}
