Creates a post form
Post form is for use with create and update.

Successfully creates a post on the server.

Next step is to work on update.

--- a/app/templates/components/post-form.hbs
+++ b/app/templates/components/post-form.hbs
@@ -1,16 +1,13 @@
-<form class="form-group" {{action 'createPost' post=model on='submit'}}>
+<form class="form-group" {{action 'save' on='submit'}}>
   <label>Title</label>
   {{input
-    type="text"
+    value=post.title
     class="form-control"
-    value=model.title
   }}
   <label>Content</label>
   {{input
+    value=post.content
     class="form-control"
-    value=model.content
   }}
   <button class='btn btn-xs btn-danger' type="submit">Submit</button>
 </form>
-
-{{outlet}}
