--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -6,6 +6,6 @@
     <li>{{post.content}}</li>
   </ul>
 {{/each}}
-{{#link-to "posts.new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
+{{#link-to "new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
 {{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
 {{outlet}}
