Added a cancel button to undo changes made in the form.

--- a/app/templates/components/post-form.hbs
+++ b/app/templates/components/post-form.hbs
@@ -9,5 +9,6 @@
     value=post.content
     class="form-control"
   }}
-  <button class='btn btn-xs btn-danger' type="submit">Submit</button>
+  <button class='btn btn-s btn-danger' type="submit">Submit</button>
+  <button class='btn btn-s btn-danger' {{action 'cancel'}}>Cancel</button>
 </form>
