--- a/app/templates/new.hbs
+++ b/app/templates/new.hbs
@@ -1,4 +1,4 @@
-{{post-form post=model save='createPost'}}
+{{post-form post=model save='createPost' cancel='cancel'}}
 {{#link-to "posts" class='btn btn-default btn-s'}}Back{{/link-to}}
 
 {{outlet}}
