--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,1 +1,9 @@
+<ul>
+  <li>{{model.title}}</li>
+  <li>{{model.content}}</li>
+  <li><button class="btn btn-default">Update</button></li>
+  <li><button class="btn btn-danger">Delete</button></li>
+</ul>
+{{#link-to "posts" class='btn btn-default btn-s'}}Back{{/link-to}}
+
 {{outlet}}
