Refactors to use a component for post-index
Scaffolded component. Refactored templates to use new component

--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,8 +1,7 @@
 <h1>Stuff is working!</h1>
 
 {{#each model as |post|}}
-  {{#link-to 'post' post class="btn btn-default"}}{{post.title}}{{/link-to}}<br>
+  {{post-index post=post}}
 {{/each}}
 {{#link-to "new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
 {{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
-{{outlet}}
