Add delete post functionality
Issue solved by originating the event inside a component.  This allows
the action and the data to be passed around eventually to the route.

--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -1,3 +1,5 @@
-{{#link-to 'post' post deletePost='deletePost' class="btn btn-default"}}{{post.title}}{{/link-to}}<br>
-
-{{outlet}}
+<div class="post-index">
+  {{#link-to 'post' post class="btn btn-default"}}{{post.title}}{{/link-to}}
+  <button {{action 'deletePost'}} class='btn btn-danger'>Delete</button>
+  {{outlet}}
+</div>
