--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,7 +1,7 @@
 <h1>Stuff is working!</h1>
 
 {{#each model as |post|}}
-  {{post-index post=post}}
+  {{post-index post=post deletePost='deletePost'}}
 {{/each}}
 {{#link-to "new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
 {{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
