--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -3,5 +3,8 @@
 {{#each model as |post|}}
   {{post-index post=post deletePost='deletePost'}}
 {{/each}}
+
+<div>
 {{#link-to "new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
 {{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
+</div>
