--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -1,7 +1,7 @@
 <div class="post-index">
   {{#link-to 'post' post class="btn btn-default"}}{{post.title}}{{/link-to}}
   {{post.user.id}}
-  {{#if post.belongsToUser}}
+  {{#if post.editable}}
     <button {{action 'deletePost'}} class='btn btn-danger'>Delete</button>
     {{#link-to 'post.edit' post}}<button class='btn btn-warning'>Update</button>{{/link-to}}
   {{/if}}
