Start creating a table to display the index
Also puts required in the input fields for creating

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,3 +4,15 @@
 .post-index {
   display: inline-block;
 }
+
+.show-post {
+  text-align: center;
+}
+
+.posts-table {
+  border: 1px solid black;
+}
+
+.posts-table tr {
+  border: 1px solid black;
+}
