Allows all show actions on posts without signed in
Edit is now its own separate route so that the check for auth
will work separately on it. Attempts to edit posts without being signed
in will redirect back to posts.

--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -3,7 +3,7 @@
   <td class="post-index">
     {{#if post.editable}}
       <button {{action 'deletePost'}} class='btn btn-danger btn-xs'>Delete</button>
-      {{#link-to 'post.edit' post}}<button class='btn btn-warning btn-xs'>Update</button>{{/link-to}}
+      {{#link-to 'edit' post}}<button class='btn btn-warning btn-xs'>Update</button>{{/link-to}}
     {{/if}}
   </td>
 </tr>
