--- a/app/templates/components/my-application.hbs
+++ b/app/templates/components/my-application.hbs
@@ -7,6 +7,7 @@
         {{#if isAuthenticated}}
         <li>{{#link-to "users"}}Users{{/link-to}}</li>
         {{/if}}
+        <li>{{#link-to "posts"}}Posts{{/link-to}}</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
@@ -28,6 +29,5 @@
 {{/each}}
 
 <div class="col-md-8 col-md-offset-2">
-  {{#link-to 'posts'}}Posts{{/link-to}}
   {{outlet}}
 </div>
