--- a/app/templates/components/my-application.hbs
+++ b/app/templates/components/my-application.hbs
@@ -5,9 +5,9 @@
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav">
         {{#if isAuthenticated}}
-        <li>{{#link-to "users"}}Users{{/link-to}}</li>
+          <li>{{#link-to "new" class='btn'}}Create New Post{{/link-to}}</li>
         {{/if}}
-        <li>{{#link-to "posts"}}Posts{{/link-to}}</li>
+        <li>{{#link-to "posts" class='btn'}}Posts{{/link-to}}</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
