--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -1,10 +1,15 @@
-<tr>
-  <td>{{#link-to 'post' post class="btn btn-default"}}{{post.title}}{{/link-to}}</td>
-  <td class="post-index">
-    {{#if post.editable}}
-      <button {{action 'deletePost'}} class='btn btn-danger btn-xs'>Delete</button>
-      {{#link-to 'edit' post}}<button class='btn btn-warning btn-xs'>Update</button>{{/link-to}}
-    {{/if}}
-  </td>
-</tr>
+<div class="post-pill">
+  <div class="index-list">
+    {{#link-to 'post' post}}{{post.title}}{{/link-to}}
+  </div>
+  <div class="user-actions index-list">
+  {{#if post.editable}}
+    <button {{action 'deletePost'}} class='btn btn-danger btn-xs'>Delete</button>
+    {{#link-to 'edit' post}}<button class='btn btn-warning btn-xs'>Update</button>{{/link-to}}
+  {{else}}
+    <button class='btn btn-default btn-xs' disabled="true">Delete</button>
+    <button class='btn btn-default btn-xs' disabled="true">Update</button>
+  {{/if}}
+  </div>
+</div>
 {{outlet}}
