--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,18 +1,9 @@
 <h4>News Feed</h4>
-<table class='posts-table'>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each model as |post|}}
-      {{post-index post=post deletePost='deletePost'}}
-    {{/each}}
-  </tbody>
-</table>
+<div class="post-index-wrapper">
+  {{#each model as |post|}}
+    {{post-index post=post deletePost='deletePost'}}
+  {{/each}}
+</div>
 <div>
-{{#link-to "new" class='btn btn-default btn-s'}}Create New Post{{/link-to}}
-{{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
+  {{#link-to "application" class='btn btn-default btn-s'}}Back{{/link-to}}
 </div>
