--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,4 +1,6 @@
-<h4>News Feed</h4>
+<div class="title-bar">
+  <h4>News Feed</h4>
+</div>
 <div class="post-index-wrapper">
   {{#each model as |post|}}
     {{post-index post=post deletePost='deletePost'}}
