--- a/app/templates/components/my-application.hbs
+++ b/app/templates/components/my-application.hbs
@@ -11,8 +11,8 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
-        <li>{{#link-to "change-password"}}Change Password{{/link-to}}</li>
-        <li><a href="#" {{action "signOut"}}>Sign Out</a></li>
+        <li>{{#link-to "change-password" class='btn'}}Change Password{{/link-to}}</li>
+        <li><a href="#" {{action "signOut"}} class='btn'>Sign Out</a></li>
         {{else}}
         <li>{{#link-to "sign-up"}}Sign Up{{/link-to}}</li>
         <li>{{#link-to "sign-in"}}Sign In{{/link-to}}</li>
@@ -22,12 +22,12 @@
   </div>
 </nav>
 
-<h1>Posts With Friends</h1>
+<div class="title-bar">
+  <h1>Posts With Friends</h1>
+</div>
 
 {{#each flashMessages.queue as |flash|}}
   {{flash-message flash=flash}}
 {{/each}}
 
-<div class="col-md-8 col-md-offset-2">
-  {{outlet}}
-</div>
+{{outlet}}
