--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -1,15 +1,20 @@
-<div class="post-pill">
-  <div class="index-list">
+<div class="panel panel-default index-list">
+  <div class="panel-heading">
     {{#link-to 'post' post}}{{post.title}}{{/link-to}}
   </div>
-  <div class="user-actions index-list">
-  {{#if post.editable}}
-    <button {{action 'deletePost'}} class='btn btn-danger btn-xs'>Delete</button>
-    {{#link-to 'edit' post}}<button class='btn btn-warning btn-xs'>Update</button>{{/link-to}}
-  {{else}}
-    <button class='btn btn-default btn-xs' disabled="true">Delete</button>
-    <button class='btn btn-default btn-xs' disabled="true">Update</button>
-  {{/if}}
+  <div class="panel-body">
+    <div class="post-content">
+      {{post.content}}
+    </div>
+    <div class="user-actions">
+    {{#if post.editable}}
+      <button {{action 'deletePost'}} class='btn btn-danger btn-xs'>Delete</button>
+      {{#link-to 'edit' post}}<button class='btn btn-warning btn-xs'>Update</button>{{/link-to}}
+    {{else}}
+      <button class='btn btn-default btn-xs' disabled="true">Delete</button>
+      <button class='btn btn-default btn-xs' disabled="true">Update</button>
+    {{/if}}
+    </div>
   </div>
 </div>
 {{outlet}}
