Adds post-panel component
This is preparation for more actions occurring in the show-post
route.

The template from post moved to show-post

--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -1,6 +1,6 @@
 <div class="panel panel-default index-list">
   <div class="panel-heading">
-    {{#link-to 'post' post}}{{post.title}}{{/link-to}}
+    {{#link-to 'post' post}}<span class="index-title">{{post.title}}</span>{{/link-to}}
   </div>
   <div class="panel-body">
     <div class="post-content">
