--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,7 +1,3 @@
-<div class="show-post">
-  <h3>{{model.title}}</h3>
-  <p>{{model.content}}</p>
-  {{#link-to "posts" class='btn btn-default btn-s'}}Back{{/link-to}}
-</div>
+{{post-panel post=model}}
 
 {{outlet}}
