--- a/app/templates/components/post-panel.hbs
+++ b/app/templates/components/post-panel.hbs
@@ -1,4 +1,4 @@
-<div class="show-post panel panel-default">
+<div class="show-post panel panel-default index-list">
   <div class="panel-heading">
     <h3>{{post.title}}</h3>
   </div>
@@ -7,5 +7,6 @@
       <p>{{post.content}}</p>
     </div>
   </div>
-  {{#link-to "posts" class='btn btn-default btn-xs'}}Back{{/link-to}}
 </div>
+
+{{#link-to "posts" class='btn btn-default btn-s'}}Back{{/link-to}}
