--- a/app/templates/change-password.hbs
+++ b/app/templates/change-password.hbs
@@ -1,3 +1,5 @@
-<h2>Change Password</h2>
+<div class="title-bar">
+  <h2>Change Password</h2>
+</div>
 
 {{change-password-form submit="changePassword"}}
