--- a/app/templates/sign-in.hbs
+++ b/app/templates/sign-in.hbs
@@ -1,3 +1,5 @@
-<h2>Sign In</h2>
+<div class="title-bar">
+  <h2>Sign In</h2>
+</div>
 
 {{sign-in-form submit="signIn" reset="reset" credentials=model}}
