Add box shading to post-index items

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,8 +18,8 @@ body {
   text-align: center;
 }
 
-.post-pill {
-  // margin: 10px 0;
+.index-pill {
+  box-shadow: 0 0 30px black;
 }
 
 .title-bar {
