--- a/app/templates/components/post-index.hbs
+++ b/app/templates/components/post-index.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-default index-list">
+<div class="panel panel-default index-list index-pill">
   <div class="panel-heading">
     {{#link-to 'post' post}}<span class="index-title">{{post.title}}</span>{{/link-to}}
   </div>
