Adds unauthorized route
Any attempts to access a route that requires user to be signed in
automatically routes user to unauthorized.

Adds some style tweaks for jumbotron

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,8 +18,8 @@ body {
   text-align: center;
 }
 
-.index-pill {
-  box-shadow: 0 0 30px black;
+.shadow {
+  box-shadow: 0 0 15px black;
 }
 
 .title-bar {
