Renames index-list class to reactive-margin
Adds reactive margin to post-form

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,10 +2,10 @@
 @import 'bootstrap/theme';
 
 body {
-  padding-top: 70px;
+  padding: 70px 25px;
 }
 
-.index-list {
+.reactive-margin {
   margin: 30px 10%;
   text-align: center;
 }
