--- a/app/templates/components/change-password-form.hbs
+++ b/app/templates/components/change-password-form.hbs
@@ -1,4 +1,4 @@
-<div class="index-list">
+<div class="reactive-margin">
   <div class="form-group">
     <label for="previous">Old Password</label>
     {{input type="password"
