--- a/app/templates/components/main-jumbotron.hbs
+++ b/app/templates/components/main-jumbotron.hbs
@@ -1,4 +1,4 @@
-<div class="jumbotron index-list">
+<div class="jumbotron reactive-margin">
   <h1>Welcome to Posts With Friends!</h1>
   <p>A social media startup that is in progress.</p>
   {{#link-to 'sign-up' class="btn btn-primary btn-lg"}}Sign Up!{{/link-to}}
