--- a/app/templates/components/post-form.hbs
+++ b/app/templates/components/post-form.hbs
@@ -1,19 +1,21 @@
-<form class="form-group" {{action 'save' on='submit'}}>
-  <label>Title</label>
-  {{input
-    value=post.title
-    class="form-control"
-    required="required"
-  }}
-  <br>
-  <label>Content</label><br>
-  {{textarea
-    value=post.content
-    class="form-control"
-    required="required"
-    rows=10
-  }}
-  <br>
-  <button class='btn btn-s btn-success' type="submit">Submit</button>
-  <button class='btn btn-s btn-danger' {{action 'cancel'}}>Cancel</button>
-</form>
+<div class="reactive-margin">
+  <form class="form-group" {{action 'save' on='submit'}}>
+    <label>Title</label>
+    {{input
+      value=post.title
+      class="form-control"
+      required="required"
+    }}
+    <br>
+    <label>Content</label><br>
+    {{textarea
+      value=post.content
+      class="form-control"
+      required="required"
+      rows=10
+    }}
+    <br>
+    <button class='btn btn-s btn-success' type="submit">Submit</button>
+    <button class='btn btn-s btn-danger' {{action 'cancel'}}>Cancel</button>
+  </form>
+</div>
