--- a/app/templates/components/post-panel.hbs
+++ b/app/templates/components/post-panel.hbs
@@ -1,4 +1,4 @@
-<div class="show-post panel panel-default index-list shadow">
+<div class="show-post panel panel-default reactive-margin shadow">
   <div class="panel-heading">
     <h3>{{post.title}}</h3>
   </div>
