--- a/app/templates/components/sign-in-form.hbs
+++ b/app/templates/components/sign-in-form.hbs
@@ -1,4 +1,4 @@
-<div class="index-list">
+<div class="reactive-margin">
   {{email-input email=credentials.email}}
   {{password-input password=credentials.password}}
 
