--- a/app/templates/unauthorized.hbs
+++ b/app/templates/unauthorized.hbs
@@ -1,4 +1,4 @@
-<h3 class="title-bar"><span class="label label-danger">You need to be signed in to access that page!</span></h3>
+<h3 class="title-bar"><span class="label label-danger">You need are not authorized to access that page!</span></h3>
 
 {{main-jumbotron}}
 
